2003-04-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/gears-func.py: 
	* examples/gears-darea.py: 
	* examples/teapot.py: 
	* examples/teapot2.py (TeapotWindow.__init__): 
	* examples/low-level.py (LowLevelDemo.__init__): 
	* examples/simple.py (SimpleDemo.__init__): 
	* examples/simple-mixed.py (SimpleMixedDemo.__init__): 
	* examples/pixmap.py (PixmapDemo.__init__): 
	* examples/pixmap-mixed.py (PixmapMixedDemo.__init__): Don't set
	resize_mode RESIZE_IMMEDIATE on Win32.

2003-04-26  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gdkgl/gdkglext.defs (gdk_gl_context_destroy)
	(gdk_gl_pixmap_destroy, gdk_gl_window_destroy): Added.

2003-04-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* acinclude.m4 (AM_CHECK_PYTHON_HEADERS): Fixed for Win32.

2003-04-16  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	Now use new versions of GNU autotools.
	
	  - autoconf 2.54 or above
	  - automake 1.7 or above
	  - libtool 1.5 or above
	
	* autogen.sh: Use libtool-1.5 and automake-1.7.
	* configure.in: Use autoconf 2.54 or above.
	* Makefile.am: Use automake-1.7.

2003-04-14  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* README.win32: Added.
	
	* Makefile.am (EXTRA_DIST): Added README.win32.

	* gtk/gdkgl/gdkglext.override: Include <windows.h> on Win32 to
	build using MSVC.

	* dsextras.py (BuildExt.init_extra_compile_args) 
	(BuildExt.build_extensions, BuildExt.build_extension): Now MSVC
	compatible struct GCC option is automatically added by BuildExt.

	* setup.py.in: extra_compile_args parameter is no longer needed.

2003-04-13  Alif Wahid	<awah005@users.sourceforge.net>

	* setup.py.in
	* setup.py: Extra predicate added to ensure that MSVC compatible
	flags are only used when actually using the GCC compiler.

2003-04-13  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* setup.py.in: Changed 'gcc --version' to 'gcc -dumpversion'.

	* examples/low-level.py: Don't import gtk.gtkgl module.
