@@ -15,6 +15,8 @@ Alif Wahid, March, 2003
 <awah005@users.sourceforge.net>
 '''
 
+import pygtk
+pygtk.require('2.0')
 from gtk.gtkgl.apputils import *
 from OpenGL.GLE import *
 
